--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -45,26 +45,9 @@
     <mat-card class="example-card" style="margin-left: auto; margin-right: auto;" >
       <mat-card-header >
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Login</mat-card-title>
+        <mat-card-title>Proximamente...</mat-card-title>
       </mat-card-header>
-      <mat-card-content>
-        <p>
-          UTILIZAR CREDENCIALES PARA INGRESAR.
-        </p> 
-          <form class="Formulario">
-            <mat-form-field class="example-full-width" appearance="fill">
-              <mat-label>Email</mat-label>
-              <input matInput placeholder="Ex. Pizza" value="ejemplo@alu.uct.cl">
-            </mat-form-field>
-            <mat-form-field class="example-full-width" appearance="fill">
-              <mat-label>Correo</mat-label>
-              <input matInput placeholder="Ex. Pizza" value="Correo">
-            </mat-form-field>
-                   
-          </form>
-          <button mat-button class="primary">Iniciar Sesion</button>
-          <button mat-button class="primary">¿Olvidaste tu contraseña?</button>
-      </mat-card-content>
+
       <mat-card-actions>
       </mat-card-actions>
     </mat-card>
