--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -31,7 +31,7 @@
         <a href = "register">
             <button mat-button class="primary">Register</button>
            </a>    
-           <a href = "recuperarcontra">
+           <a href = "olvidapass">
             <button mat-button class="primary">¿Olvidaste tu contraseña?</button>
            </a>         
     </mat-card-actions>
