--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -17,19 +17,25 @@
                 <span>Cuenta</span>
               </button>
             </a>
+            <a href = "busqueda">
             <button mat-menu-item>
               <mat-icon>list</mat-icon>
               <span>Busqueda</span>
             </button>
+          </a>
           </mat-menu>
         <mat-icon>account_balance</mat-icon> 
         <span> Biblioteca Cleawei</span>
         <span class="example-spacer"></span>
+        <a href="https://github.com/MarceloCleaver/cleawei">
         <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
         <mat-icon>favorite</mat-icon>
         </button>
+        </a>
+        <a href="https://www.uct.cl/">
         <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
         <mat-icon>share</mat-icon>
         </button>
+        </a>
     </mat-toolbar>
 </div>
