--- a/src/app/home/busqueda/busqueda.component.html
+++ b/src/app/home/busqueda/busqueda.component.html
@@ -1,25 +1,44 @@
+<div class="row">
+  <div class="col-2"></div>
+  <div class="col-8" style="margin-top: 10vh;">
+    <mat-card>
+      <mat-card-content>
+          <div class="row">
+            <div class="col-10">
+              <input class="form-control mr-sm-2" type="text" placeholder="Busqueda de material">
+            </div>
+            <div class="col-2">
+              <button mat-raised-button class="w-100" color="primary"> <mat-icon>search</mat-icon>  </button>
+            </div>
+          </div>
+      </mat-card-content>
+    </mat-card>
 
-<div class="row" style="min-height: 60%; margin-top: 3cm; margin-bottom: 0cm;">
-    <div class="col-12 m-2">
-    <mat-card class="cartabusquedas" style="margin-left: auto; margin-right: auto; height: 50%;">
-        <mat-card-header class="nom">
-            <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Busquedas</mat-card-title>
-        </mat-card-header>       
-        <mat-card-content>
-            <form class="form-inline waves-light" mdbWavesEffect>
-                <div class="md-form mt-0">
-                  <input class="form-control mr-sm-2" type="text" placeholder="Busqueda de material">
-                </div>
-              </form>
-        </mat-card-content>
-    
-      </mat-card>
+    <table *ngIf="dataSource.length !== 0"  mat-table [dataSource]="dataSource" class="mat-elevation-z8 mt-3 w-100 animate__animated animate__fadeIn">
+
+      <ng-container matColumnDef="carrera">
+        <th mat-header-cell *matHeaderCellDef> Carrera </th>
+        <td mat-cell *matCellDef="let element"> {{element.carrera}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="filename">
+        <th mat-header-cell *matHeaderCellDef> Archivo </th>
+        <td mat-cell *matCellDef="let element"> {{element.filename}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="download">
+        <th mat-header-cell *matHeaderCellDef> </th>
+        <td mat-cell *matCellDef="let element"> <button mat-button (click)="downloadFile(element.link)" > <mat-icon>visibility</mat-icon> </button> </td>
+      </ng-container>
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <div *ngIf="dataSource.length === 0">
+      <h1>Cargando archivos...</h1>
     </div>
+
+  </div>
+  <div class="col-2"></div>
 </div>
-<mat-card class="cartabusquedas">
-<div class="resultados">
-    <mat-icon>expand_more</mat-icon>
-    <p>Aquí va el resultado de las busquedas (DESARROLLO...)   </p>
-</div>
-</mat-card>
