--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,41 +1,41 @@
     
 <div class="row navcontainer">
-    <mat-toolbar>
-        <button [matMenuTriggerFor]="menu" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-        <mat-icon>menu</mat-icon>
+  <mat-toolbar>
+    <button [matMenuTriggerFor]="menu" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+       <a [routerLink]="['/home']">
+        <button mat-menu-item>
+          <mat-icon>home</mat-icon>
+          <span>Inicio</span>
         </button>
-        <mat-menu #menu="matMenu">
-           <a href = "home">
-            <button mat-menu-item>
-              <mat-icon>home</mat-icon>
-              <span>Inicio</span>
-            </button>
-          </a>
-            <a href = "perfil">
-            <button mat-menu-item>
-                <mat-icon>account_circle</mat-icon>
-                <span>Cuenta</span>
-              </button>
-            </a>
-            <a href = "busqueda">
-            <button mat-menu-item>
-              <mat-icon>list</mat-icon>
-              <span>Busqueda</span>
-            </button>
-          </a>
-          </mat-menu>
-        <mat-icon>account_balance</mat-icon> 
-        <span> Biblioteca Cleawei</span>
-        <span class="example-spacer"></span>
-        <a href="https://github.com/MarceloCleaver/cleawei">
-        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-        <mat-icon>favorite</mat-icon>
-        </button>
+      </a>
+        <a [routerLink] = "['/perfil']">
+        <button mat-menu-item>
+            <mat-icon>account_circle</mat-icon>
+            <span>Cuenta</span>
+          </button>
         </a>
-        <a href="https://www.uct.cl/">
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-        <mat-icon>share</mat-icon>
+        <a [routerLink] = "['/busqueda']">
+        <button mat-menu-item>
+          <mat-icon>list</mat-icon>
+          <span>Busqueda</span>
         </button>
-        </a>
-    </mat-toolbar>
+      </a>
+      </mat-menu>
+    <mat-icon>account_balance</mat-icon>
+    <span> Biblioteca Cleawei</span>
+    <span class="example-spacer"></span>
+    <a href="https://github.com/MarceloCleaver/cleawei" target="_blank">
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <mat-icon>favorite</mat-icon>
+    </button>
+    </a>
+    <a href="https://www.uct.cl/" target="_blank">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+    <mat-icon>share</mat-icon>
+    </button>
+    </a>
+</mat-toolbar>
 </div>
